--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,26 @@
     android:layout_height="wrap_content"
     android:text="Hello World!" />
 
+  <EditText
+    android:hint="请输入账号"
+    android:id="@+id/et_account"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp" />
 
+  <EditText
+    android:hint="请输入密码"
+    android:id="@+id/et_password"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:inputType="textPassword" />
+
+  <Button
+    android:text="登录"
+    android:id="@+id/btn_login"
+    android:layout_gravity="center"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
 
 </LinearLayout>
