--- a/app/src/main/res/layout/activity_four.xml
+++ b/app/src/main/res/layout/activity_four.xml
@@ -5,6 +5,13 @@
 
 
   <TextView
+    android:id="@+id/tv_tip"
+    android:layout_gravity="center"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
+  <TextView
+    android:layout_marginTop="50dp"
     android:id="@+id/tv_user"
     android:layout_gravity="center"
     android:layout_width="wrap_content"
